# jesse

./: .coverage  .env.example  .gitignore  Procfile  README.md  deploy.sh  main.py  pyproject.toml  requirements.txt
.claude/skills/docs-consolidator/references/: doc-registry.md
.github/workflows/: ci.yml  security.yml
docs/: ARCHITECTURE.md  CLAUDE.md  PRD.md  TASKS.md
src/: config.py
src/alerts/: discord.py
src/analysis/: __init__.py  charts.py  metrics.py
src/core/: engine.py  portfolio.py  timeframe.py  types.py
src/data/: cache.py  historical.py  live.py  orderflow.py  provider.py
src/execution/: backtest.py  executor.py  paper.py  sl_tp.py
src/persistence/: __init__.py  database.py  models.py
src/strategy/: base.py  loader.py
src/strategy/examples/: breakout_strategy.py  ma_crossover.py  mtf_strategy.py  rsi_strategy.py
tests/: conftest.py  test_analysis.py  test_cli.py  test_config.py  test_data.py  test_discord.py  test_engine.py  test_engine_persistence.py  test_example_strategies.py  test_execution.py  test_forward_test.py  test_live.py  test_paper.py  test_persistence.py  test_portfolio.py  test_sl_tp.py  test_strategy.py  test_types.py
