[project]
name = "jesse"
version = "1.0.0"
description = "BTC/USDT perpetual futures backtesting and forward testing system"
requires-python = ">=3.11"

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "ccxt>=4.0",
    "pyarrow>=14.0",
    "pandas>=2.0",
    "websockets>=12.0",
    "aiosqlite>=0.19",
    "httpx>=0.25",
    "plotly>=5.18",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
